fix: 1.searchGroup itemStyle width 修复 2.date-picker format 默认继承 valueFormat 3.filters-collapse label 展示 换行修复

--- a/style/adber/searchGroup.scss
+++ b/style/adber/searchGroup.scss
@@ -233,6 +233,7 @@
       border: none;
       .title {
         width: max-content;
+        min-width: max-content;
         //min-width: 100px;
         //white-space: nowrap;
         //text-overflow: ellipsis;
